# ecs

./: README.md
src/: .gitignore  CMakeLists.txt  main.cpp
src/framework/: component.h  component_factory.cpp  component_factory.h  entity.cpp  entity.h  entity_def.h  entity_manager.cpp  entity_manager.h  system.h
src/game/: ComponentType.h  TransformComponent.h
